[tool.poetry]
name = "Homework_20_2"
version = "0.1.0"
description = ""
authors = ["AleksandrZaec <zaecam95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"